--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <body>
 
     <div class="container">
+
       <header>
         <h1>Matching Game</h1>
       </header>
@@ -28,9 +29,7 @@
           <li><i class="fa fa-star"></i></li>
           <li><i class="fa fa-star"></i></li>
         </ul>
-
         <span class="moves">0</span> Moves
-
         <div class="restart">
           <i class="fa fa-repeat"></i>
         </div>
@@ -41,7 +40,7 @@
           <i class="fa fa-diamond"></i>
         </li>
         <li class="card">
-          <i class="fa fa-paper-plane-o"></i>
+          <i class="fa fa-paper-plane"></i>
         </li>
         <li class="card">
           <i class="fa fa-anchor"></i>
@@ -80,12 +79,20 @@
           <i class="fa fa-bicycle"></i>
         </li>
         <li class="card">
-          <i class="fa fa-paper-plane-o"></i>
+          <i class="fa fa-paper-plane"></i>
         </li>
         <li class="card">
           <i class="fa fa-cube"></i>
         </li>
       </ul>
+    </div>
+
+    <div class="hide result">
+      <h2>Congratulations! You did it!</h2>
+      <p>
+        With <span class="moves"></span> Moves and <span class="starCounter"></span> <span class="starText">Stars!</span>
+      </p>
+      <button id="play-btn" name="button">Play again!</button>
     </div>
 
     <script src="js/app.js"></script>
