feat: implement timer

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
           <li><i class="fa fa-star"></i></li>
           <li><i class="fa fa-star"></i></li>
         </ul>
-        <span class="moves">0</span> Moves
+        <span class="moves">0</span> Moves - Time:
+        <span id="realtime">00:00</span>
         <div class="restart">
           <i class="fa fa-repeat"></i>
         </div>
@@ -90,7 +91,8 @@
     <div class="hide result">
       <h2>Congratulations! You did it!</h2>
       <p>
-        With <span class="moves"></span> Moves and <span class="starCounter"></span> <span class="starText">Stars!</span>
+        With <span class="movesTotal"></span> Moves and <span class="starCounter"></span> <span class="starText">Stars!</span>
+         (Time <span class="time"></span>)
       </p>
       <button id="play-btn" name="button">Play again!</button>
     </div>
