refactor: Display time result as separate paragraph

--- a/index.html
+++ b/index.html
@@ -86,7 +86,10 @@
     <div class="hide result">
       <h2>Congratulations! You did it!</h2>
       <p>
-        With <span class="movesTotal"></span> Moves and <span class="starCounter"></span> <span class="starText">Stars!</span> (Time <span class="time"></span>)
+        With <span class="movesTotal"></span> Moves and <span class="starCounter"></span> <span class="starText">Stars!</span>
+        <p>
+          Time: <span class="time"></span>
+        </p>
       </p>
       <button id="play-btn" name="button">Play again!</button>
     </div>
